--- a/Desafio Nº7/index.html
+++ b/Desafio Nº7/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="shortcut icon" href="#" />
-    <title>Seguro hogar</title>
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/reset.css" />
+        <link rel="stylesheet" href="css/index.css" />
+        <link rel="shortcut icon" href="#" />
+        <title>Seguro hogar</title>
+    </head>
 
-  <body>
-    <div class="centered-title">
-      <h1>Seguro hogar</h1>
-      <div id="monto">
-        <p>Monto total:</p>
-        <p id="costo"></p>
-      </div>
-      <button id="reset">Volver a elegir</button>
-    </div>
-    <div id="grid-container"></div>
-    <div class="image-container"></div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script async src="../js/index.js"></script>
-    <script async src="../js/cotizado.js"></script>
-  </body>
+    <body>
+        <div class="centered-title">
+            <h1>Seguro hogar</h1>
+            <div id="monto">
+                <p>Monto total:</p>
+                <p id="costo"></p>
+            </div>
+            <button id="reset">Volver a elegir</button>
+        </div>
+        <div id="grid-container"></div>
+        <div class="image-container">
+            <img src="images\seguro_hogar.jpg" />
+        </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script async src="../js/index.js"></script>
+        <script async src="../js/cotizado.js"></script>
+    </body>
 </html>
