--- a/Desafio Nº7/index.html
+++ b/Desafio Nº7/index.html
@@ -19,9 +19,11 @@
             </div>
             <button id="reset">Volver a elegir</button>
         </div>
-        <div id="grid-container"></div>
-        <div class="image-container">
-            <img src="images\seguro_hogar.jpg" />
+        <div class="main">
+            <div id="grid-container"></div>
+            <div class="image-container">
+                <img src="images\seguro_hogar.jpg" />
+            </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script async src="../js/index.js"></script>
