Modificacion de estilo

--- a/Desafio Nº7/index.html
+++ b/Desafio Nº7/index.html
@@ -9,24 +9,9 @@
         <link rel="shortcut icon" href="#" />
         <title>Seguro hogar</title>
     </head>
-
     <body>
-        <div class="centered-title">
-            <h1>Seguro hogar</h1>
-            <div id="monto">
-                <p>Monto total:</p>
-                <p id="costo"></p>
-            </div>
-            <button id="reset">Volver a elegir</button>
-        </div>
-        <div class="main">
-            <div id="grid-container"></div>
-            <div class="image-container">
-                <img src="images\seguro_hogar.jpg" />
-            </div>
-        </div>
+        <div class="main"></div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script async src="../js/index.js"></script>
-        <script async src="../js/cotizado.js"></script>
+        <script async src="../js/main.js"></script>
     </body>
 </html>
