placeholder para la proxima presentacion

--- a/Desafio Nº7/data.html
+++ b/Desafio Nº7/data.html
@@ -1,10 +1,18 @@
 <div class="centered-title">
-    <h1>Seguro hogar</h1>
-    <div id="monto">
-        <p>Monto total:</p>
-        <p id="costo"></p>
+    <h1>
+        <a href="index.html"> Seguro hogar </a>
+    </h1>
+    <div id="amount">
+        <p>El valor de su seguro es de</p>
+        &nbsp;
+        <p id="cost"></p>
+        &nbsp;
+        <p>ARS</p>
     </div>
-    <button id="reset">Volver a elegir</button>
+    <div class="buttons">
+        <button class="reset">Reiniciar</button>
+        <button class="save">Guardar</button>
+    </div>
 </div>
 <div class="main">
     <div id="grid-container"></div>
